<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PaymentActivity">

    <include
        android:id="@+id/toolbarPayment"
        layout="@layout/toolbar_layout" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/strPayment"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="3">

        <TextView android:text="@string/strPrice" />

        <TextView
            android:padding="5dp"
            android:text="@string/strColon" />

        <TextView android:id="@+id/paymentPrice" />

    </GridLayout>

    <EditText
        android:id="@+id/userPriceInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintPayment"
        android:inputType="number" />

    <Button
        android:id="@+id/btnPay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/strPay" />

</LinearLayout>