<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GameDetailActivity">

    <include
        android:id="@+id/toolbarGameDetail"
        layout="@layout/toolbar_layout" />

    <TextView
        android:id="@+id/gameDetailsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="asdasd"
        android:textSize="30sp"
        android:textStyle="bold" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strStock" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/strColon" />

        <TextView
            android:id="@+id/gameDetailsStock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="asdasdsa" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strPrice" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/strColon" />

        <TextView
            android:id="@+id/gameDetailsPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="asdasdsa" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strGenre" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/strColon" />

        <TextView
            android:id="@+id/gameDetailsGenre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="asdasdsa" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strDesc" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/strColon" />

        <TextView
            android:id="@+id/gameDetailsDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="asdasdsa" />

    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2">

        <RatingBar
            android:id="@+id/gameDetailRating"
            style="@style/Base.Widget.AppCompat.RatingBar.Indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:isIndicator="true" />

        <Button
            android:id="@+id/btnBuy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:text="@string/strBuy" />

    </GridLayout>


</LinearLayout>