<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".HomeActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <include
            android:id="@+id/toolbarHome"
            layout="@layout/toolbar_layout" />

        <LinearLayout
            android:id="@+id/homeProfile"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.25"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/homeProfilePicture"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:src="@drawable/ic_profile_pic" />

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:columnCount="3"
                android:rowCount="3">

                <TextView android:text="@string/strUsername" />

                <TextView
                    android:layout_marginLeft="5dp"
                    android:text="@string/strColon" />

                <TextView
                    android:id="@+id/homeUsername"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp" />

                <TextView android:text="@string/strUserEmail" />

                <TextView
                    android:layout_marginLeft="5dp"
                    android:text="@string/strColon" />

                <TextView
                    android:id="@+id/homeEmail"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp" />

                <TextView android:text="@string/strUserPhone" />

                <TextView
                    android:layout_marginLeft="5dp"
                    android:text="@string/strColon" />

                <TextView
                    android:id="@+id/homePhone"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp" />

            </GridLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.75"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="5dp"
                android:text="@string/homeHeader"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/noGame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textAlignment="center"
                android:textSize="20sp" />


            <ListView
                android:id="@+id/homeGameList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </ListView>


        </LinearLayout>
    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view_home"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/nav_drawer" />

</android.support.v4.widget.DrawerLayout>